<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_margin="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_receipt"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:fontFamily="@font/jakarta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/illu_parking" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parking_name"
                        android:textColor="#000000"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/parking_address" />
                </LinearLayout>

            </LinearLayout>

            <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_grey"/>

            <include layout="@layout/detail_view_time_schedule" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textSize="8sp"
                        android:textColor="@color/light_grey"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Kai Havertz"
                        android:textSize="10sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Parking pass"
                        android:textSize="8sp"
                        android:textColor="@color/light_grey"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="#23-5-76"
                        android:textSize="10sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Duration"
                        android:textSize="8sp"
                        android:textColor="@color/light_grey"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2.5 hours"
                        android:textSize="10sp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:layout_marginBottom="10dp"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey"/>

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_barcode"
                android:layout_gravity="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Download Receipt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/light_blue"/>
</androidx.constraintlayout.widget.ConstraintLayout>